
  ZOOKEEPER-2253: C asserts ordering of ping requests, while Java client does not
  (Chris Chen via rgs)

  ZOOKEEPER-2244: On Windows zookeeper fails to restart (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2268: Zookeeper doc creation fails on windows
  (Arshad Mohammad via cnauroth)

  ZOOKEEPER-2281: ZK Server startup fails if there are spaces in the JAVA_HOME
  path (Neha Bathra via cnauroth)

IMPROVEMENTS:

  ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
  (Jordan Zimmerman via rgs)

  ZOOKEEPER-2040: Server to log underlying cause of SASL connection problems.
  (Steve Loughran via cnauroth)

Release 3.5.1 - 07/27/2015

NEW FEATURES:
  ZOOKEEPER-2069 Netty Support for ClientCnxnSocket (Hongchao via fpj)

  ZOOKEEPER-2119 Netty client docs (Hongchao via rakeshr)

  ZOOKEEPER-2125 SSL on Netty client-server communication (Hongchao, Ian Dimayuga via rakeshr)

  ZOOKEEPER-2123 Provide implementation of X509 AuthenticationProvider
  (Ian Dimayuga via rakeshr)

  ZOOKEEPER-2163: Introduce new ZNode type: container (Jordan Zimmerman via rgs)

BUGFIXES:
  ZOOKEEPER-1784 wrong check for COMMITANDACTIVATE in observer code, Learner.java (rgs via shralex).

  ZOOKEEPER-2047 testTruncationNullLog fails on windows (flavio via rakeshr)

  ZOOKEEPER-2026 Startup order in ServerCnxnFactory-ies is wrong (Stevo Slavic via rakeshr)

  ZOOKEEPER-2049 Yosemite build failure: htonll conflict (Till Toenshoff via
  michim)

  ZOOKEEPER-2052 Unable to delete a node when the node has no children
  (Hongchao Deng and Yip Ng via rakeshr)
 
  ZOOKEEPER-2060 Trace bug in NettyServerCnxnFactory (Ian via fpj)

  ZOOKEEPER-2064 Prevent resource leak in various classes (Ted Yu via fpj)

  ZOOKEEPER-2072 Netty Server Should Configure Child Channel Pipeline By Specifying 
  ChannelPipelineFactory (Hongchao via rakeshr)

  ZOOKEEPER-2111 Not isAlive states should be synchronized in ClientCnxn 
  (Hongchao via rakeshr)
