@@ -30,6 +30,9 @@ BUGFIXES:
   ZOOKEEPER-2281: ZK Server startup fails if there are spaces in the JAVA_HOME
   path (Neha Bathra via cnauroth)
 
+  ZOOKEEPER-1460: IPv6 literal address not supported for quorum members
+  (Joseph Walton via cnauroth)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
